<resources>
    <string name="app_name">restaurante</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hola_explora_la_comida_de_tus_sue_os">Hola explora la comida de tus sueños</string>
    <string name="iniciar_sesion">iniciar sesion</string>
    <string name="registrate">Registrate</string>
    <string name="restaurante">Restaurante</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_addres">Email Addres</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing in</string>
</resources>